gcc/testsuite/rust/rustc/ui/resolve/issue-109250.rs
fn main() {       // { help "" "" { target *-*-* } }
    HashMap::new; // { dg-error ".E0433." "" { target *-*-* } }
}

